/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package androidx.health.platform.client.proto;

option java_package = "androidx.health.platform.client.proto";
option java_outer_classname = "DataProto";

// Unknown data type names will be ignored.
message DataType {
  optional string name = 1;
}

message Value {
  oneof value {
    int64 long_val = 1;
    double double_val = 2;
    string string_val = 3;
    string enum_val = 4;
  }
}

message Device {
  optional string identifier = 1;
  optional string manufacturer = 2;
  optional string model = 3;
  optional string type = 4;
}

message DataOrigin {
  optional string application_id = 1;
}

message SeriesValue {
  map<string, Value> values = 1;
  optional int64 instant_time_millis = 2;
}

message DataPoint {
  optional DataType data_type = 1;
  map<string, Value> values = 2;

  optional string uid = 3;
  optional string origin_series_uid = 4;
  optional DataOrigin data_origin = 5;

  // Unset if it is interval or series data, use start_zone_offset_seconds and
  // end_zone_offset_seconds instead.
  optional int32 zone_offset_seconds = 6;

  optional int64 update_time_millis = 7;

  // Unset if interval start/end millis are used.
  optional int64 instant_time_millis = 8;

  optional int64 start_time_millis = 9;
  optional int64 end_time_millis = 10;

  optional string client_id = 11;
  optional int64 client_version = 12;
  optional Device device = 13;

  optional string origin_sample_uid = 14;
  repeated SeriesValue series_values = 15;
  optional AggregatedValue min = 16;
  optional AggregatedValue max = 17;
  optional AggregatedValue avg = 18;

  optional int32 start_zone_offset_seconds = 19;
  optional int32 end_zone_offset_seconds = 20;
}

message AggregatedValue {
  map<string, Value> values = 1;
}

message AggregateDataRow {
  optional int64 start_time_epoch_ms = 1;
  optional int64 end_time_epoch_ms = 2;
  optional string start_local_date_time = 3;
  optional string end_local_date_time = 4;
  optional int32 zone_offset_seconds = 5;

  // Key by metric spec {type}_{field}_{agg}
  map<string, double> double_values = 6;
  map<string, int64> long_values = 7;
  repeated DataOrigin data_origins = 8;
}